# hibp

./: .clang-tidy  .gitmodules  BUILD-FreeBSD.md  BUILD-Windows.md  BUILD-linux.md  CMakeLists.txt  README.md  build.sh  clang-format.sh  clang-tidy.sh  compile_commands.json  fetch_deps.sh  fetch_hibp.sh  release.sh  snapcraft.yaml
.github/workflows/: alma.yml  debian10.yml  debian11.yml  debian12.yml  debian13.yml  docker.yml  freebsd.yml  msys2.yml  ubuntu.yml
DEBIAN/: control
app/: hibp.cpp  hibp_build_filter.cpp  hibp_convert.cpp  hibp_diff.cpp  hibp_download.cpp  hibp_dupes.cpp  hibp_join.cpp  hibp_query_filter.cpp  hibp_search.cpp  hibp_server.cpp  hibp_sort.cpp  hibp_topn.cpp
bench/: CMakeLists.txt  arrcmp.cpp  run_and_graph_results.sh
bench/results/: cmp.csv
docker/: Dockerfile  entrypoint.sh
ext/asmlib/: libad32.lib  libad64.lib  libaomf32.lib
include/: arrcmp.hpp  bin_fuse_filter.hpp  binfuse.hpp  bytearray_cast.hpp  diffutils.hpp  flat_file.hpp  flat_file_db.hpp  hibp.hpp  md4.h  ntlm.hpp  sharded_bin_fuse_filter.hpp  sharded_binary_fuse_filter.hpp  toc.hpp
include/binfuse/: filter.hpp  sharded_filter.hpp
include/dnl/: queuemgt.hpp  requests.hpp  resume.hpp  shared.hpp
include/download/: download.hpp  queuemgt.hpp  requests.hpp  shared.hpp
include/srv/: server.hpp
scripts/: clang-format.sh  clang-tidy.sh  debug.sh  pragma_check.sh  profile_compiler.sh
src/: diffutils.cpp  ntlm.cpp  toc.cpp
src/dnl/: queuemgt.cpp  requests.cpp  resume.cpp  shared.cpp
src/download/: download.cpp  queuemgt.cpp  requests.cpp  shared.cpp
src/srv/: server.cpp
test/: CMakeLists.txt  TESTING_PLAN.md  docker_test.sh  mock_api_server.cpp  system_tests.sh  test_arrcmp.cpp  test_binfuse.cpp  test_diffutils.cpp  test_search.cpp
test/data/: hibp_test.ntlm.bin.18.toc  hibp_test.sha1.bin.18.toc
test/data/ntlm/: 00000  00001  00002  00003  00004  00005  00006  00007  00008  00009  0000A  0000B  0000C  0000D  0000E  0000F  00010  00011  00012  00013  00014  00015  00016  00017  00018  00019  0001A  0001B  0001C  0001D  0001E  0001F  00020  00021  00022  00023  00024  00025  00026  00027  (+216 more)
test/data/sha1/: 00000  00001  00002  00003  00004  00005  00006  00007  00008  00009  0000A  0000B  0000C  0000D  0000E  0000F  00010  00011  00012  00013  00014  00015  00016  00017  00018  00019  0001A  0001B  0001C  0001D  0001E  0001F  00020  00021  00022  00023  00024  00025  00026  00027  (+216 more)
